--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='55' height='55' viewBox='0 0 55 55'%3E%3Crect width='55' height='55' fill='%23003d7c'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' fill='white' font-size='10' font-family='Arial'%3EOREP%3C/text%3E%3C/svg%3E" 
        alt="Logo OREP" 
        class="logo"
-       data-src="logo.png" <!-- Real image loads later -->
+       data-src="logo.png" 
        loading="lazy">
   
   <div class="header-text">
