--- a/audyt/index.html
+++ b/audyt/index.html
@@ -1,1 +1,8 @@
-TO JEST FOLDER DLA MIRELI
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+<meta charset="UTF-8">
+<meta name="robots" content="noindex, nofollow"
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TO STRONA DLA MIRELI</title>
+<link rel="icon" href="/favicon.png">
