--- a/audyt/index.html
+++ b/audyt/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
-<html lang="pl">
-<head>
-<meta charset="UTF-8">
-<meta name="robots" content="noindex, nofollow"
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TO STRONA DLA MIRELI</title>
-<link rel="icon" href="/favicon.png">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link rel="shortcut icon" href="/logo.png">
+  <meta name="facebook-domain-verification" content="qqqqqqqqqq">
+  <title>Strona dla MIRELI DRABIK która spowodowała, że .....</title>
+  <meta name="robots" content="no_index,no_follow">
+  <meta name="description" content="Aplus ➤ Świadectwo energetyczne od 129zł! Wykonaliśmy ponad 30 tysięcy świadectw. Otrzymaj certyfikat energetyczny szybko i bezproblemowo! ⭐ Sprawdź!">
+  <meta property="og:title" content="Świadectwo energetyczne online ⭐ od 129 zł w 24 godziny ⭐ Aplus">
+  <meta property="og:description" content="Aplus ➤ Świadectwo energetyczne od 129zł! Wykonaliśmy ponad 30 tysięcy świadectw. Otrzymaj certyfikat energetyczny szybko i bezproblemowo! ⭐ Sprawdź!">
+  <meta property="og:url" content="https://Aplus.com">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://i.postimg.cc/1tCSMPvX/pionowe-3.png">
+  <meta property="og:image:alt" content="audytomat świadectwo energetyczne">
+  <meta property="og:image:width" content="860">
+  <meta property="og:image:height" content="1200">
+  <meta property="og:locale" content="pl_PL">
+  <meta property="og:site_name" content="Audytomat">
+  <link rel="canonical" href="https://audytomat.com">
+  <meta property="keywords" content="audytomat, świadectwo energetyczne, świadectwo energetyczne online, certyfikat energetyczny">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+  <meta name="googlebot" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+  <meta name="GPTBot" content="index, follow">
+  <meta name="ChatGPT-User" content="index, follow">
+  <meta name="CCBot" content="index, follow">
+  <meta name="anthropic-ai" content="index, follow">
+  <meta name="Claude-Web" content="index, follow">
+  <meta name="next-head-count" content="27">
