--- a/audyt/index.html
+++ b/audyt/index.html
@@ -11,13 +11,13 @@
   <meta property="og:url" content="https://Aplus.com">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://i.postimg.cc/1tCSMPvX/pionowe-3.png">
-  <meta property="og:image:alt" content="audytomat świadectwo energetyczne">
+  <meta property="og:image:alt" content="Aplus świadectwo energetyczne">
   <meta property="og:image:width" content="860">
   <meta property="og:image:height" content="1200">
   <meta property="og:locale" content="pl_PL">
-  <meta property="og:site_name" content="Audytomat">
-  <link rel="canonical" href="https://audytomat.com">
-  <meta property="keywords" content="audytomat, świadectwo energetyczne, świadectwo energetyczne online, certyfikat energetyczny">
+  <meta property="og:site_name" content="Aplus">
+  <link rel="canonical" href="https://Aplus.com">
+  <meta property="keywords" content="Aplus, świadectwo energetyczne, świadectwo energetyczne online, certyfikat energetyczny">
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
   <meta name="googlebot" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
   <meta name="GPTBot" content="index, follow">
