--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Ogólnopolski Rejestr Elektryków - zarejestruj się lub znajdź certyfikowanego elektryka w Twojej okolicy.">
+      <meta property="og:image" content="https://i.postimg.cc/Z0cxFCZR/bezpieczenstwo.png">
+      <meta property="og:image" content="https://i.postimg.cc/rzJNCKcS/certyfikowani.png">
+      <meta property="og:image" content="https://i.postimg.cc/zVGSd8XS/favicon.png">
+      <meta property="og:image" content="https://i.postimg.cc/HVv0RRVq/icon-192.png">
+      <meta property="og:image" content="https://i.postimg.cc/qNtcTwKz/icon-512.png">
+      <meta property="og:image" content="https://i.postimg.cc/94ZG4fJm/logo.png">
+      <meta property="og:image" content="https://i.postimg.cc/BLCHgVWq/logo1.png">
+      <meta property="og:image" content="https://i.postimg.cc/8jcMR4ty/orzel-3.webp">
+      <meta property="og:image" content="https://i.postimg.cc/qtVKdT4f/rejestracja.png">
   <title>Ogólnopolski Rejestr Elektryków w Polsce</title>
   <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
