--- a/index.html
+++ b/index.html
@@ -279,10 +279,8 @@
     </a>
 
     <a href="/wyszukiwarka" class="box">
-      <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='65' height='65' viewBox='0 0 65 65'%3E%3Crect width='65' height='65' fill='%23f0f0f0'/%3E%3C/svg%3E"
-           alt="Orzeł 2"
-           data-src="orzel_2.png"
-           loading="lazy">
+           <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","name":"Audytomat","url":"https://audytomat.com","description":"Audytomat ➤ Świadectwo energetyczne od 129zł! Wykonaliśmy ponad 30 tysięcy świadectw. Otrzymaj certyfikat energetyczny szybko i bezproblemowo! ⭐ Sprawdź!","publisher":{"@type":"Organization","name":"Audytomat","logo":{"@type":"ImageObject","url":"https://i.postimg.cc/1tCSMPvX/pionowe-3.png"}}}</script>
+
       <p>SZUKAM ELEKTRYKA</p>
     </a>
 
