--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Ogólnopolski Rejestr Elektryków - zarejestruj się lub znajdź certyfikowanego elektryka w Twojej okolicy.">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Ogólnopolski Rejestr Elektryków - zarejestruj się lub znajdź certyfikowanego elektryka w Twojej okolicy.">
+      <meta property="og:image" content="https://i.postimg.cc/Z0cxFCZR/bezpieczenstwo.png">
+      <meta property="og:image" content="https://i.postimg.cc/rzJNCKcS/certyfikowani.png">
+      <meta property="og:image" content="https://i.postimg.cc/zVGSd8XS/favicon.png">
+      <meta property="og:image" content="https://i.postimg.cc/HVv0RRVq/icon-192.png">
+      <meta property="og:image" content="https://i.postimg.cc/qNtcTwKz/icon-512.png">
+      <meta property="og:image" content="https://i.postimg.cc/94ZG4fJm/logo.png">
+      <meta property="og:image" content="https://i.postimg.cc/BLCHgVWq/logo1.png">
+      <meta property="og:image" content="https://i.postimg.cc/8jcMR4ty/orzel-3.webp">
+      <meta property="og:image" content="https://i.postimg.cc/qtVKdT4f/rejestracja.png">
   <title>Ogólnopolski Rejestr Elektryków w Polsce</title>
   <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -244,7 +255,7 @@
   <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='55' height='55' viewBox='0 0 55 55'%3E%3Crect width='55' height='55' fill='%23003d7c'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' fill='white' font-size='10' font-family='Arial'%3EOREP%3C/text%3E%3C/svg%3E" 
        alt="Logo OREP" 
        class="logo"
-       data-src="logo.png" 
+       data-src="https://i.postimg.cc/94ZG4fJm/logo.png" 
        loading="lazy">
 
   <div class="header-text">
