--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <div class="feature">
       <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='70' height='70' viewBox='0 0 70 70'%3E%3Crect width='70' height='70' fill='%23f0f0f0'/%3E%3C/svg%3E"
            alt="Bezpieczeństwo"
-           data-src="bezpieczenstwo.png"
+           data-src="https://i.postimg.cc/Z0cxFCZR/bezpieczenstwo.png"
            loading="lazy">
       <h3>Bezpieczeństwo</h3>
       <p>Rejestr prezentuje profile elektryków posiadających udokumentowane kwalifikacje. Klienci mogą w prosty sposób sprawdzić kompetencje, specjalizacje oraz status profilu.</p>
@@ -310,7 +310,7 @@
     <div class="feature">
       <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='70' height='70' viewBox='0 0 70 70'%3E%3Crect width='70' height='70' fill='%23f0f0f0'/%3E%3C/svg%3E"
            alt="Rejestracja"
-           data-src="rejestracja.png"
+           data-src="https://i.postimg.cc/qtVKdT4f/rejestracja.png"
            loading="lazy">
       <h3>Rejestracja</h3>
       <p>Proces rejestracji jest szybki i prosty. Po utworzeniu konta elektryk może zarządzać swoim profilem, aktualizować dane i prezentować zakres wykonywanych usług.</p>
@@ -319,7 +319,7 @@
     <div class="feature">
       <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='70' height='70' viewBox='0 0 70 70'%3E%3Crect width='70' height='70' fill='%23f0f0f0'/%3E%3C/svg%3E"
            alt="Certyfikowani fachowcy"
-           data-src="certyfikowani.png"
+           data-src="https://i.postimg.cc/rzJNCKcS/certyfikowani.png"
            loading="lazy">
       <h3>Certyfikowani fachowcy</h3>
       <p>Platforma umożliwia przejrzyste zaprezentowanie zakresu kompetencji, specjalizacji oraz statusu profilu, dzięki czemu klienci mogą w wygodny sposób zapoznać się z ofertą fachowców działających w danym regionie.</p>
