--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
            loading="lazy">
       <p>SZUKAM ELEKTRYKA</p>
     </a>
-    <a href="/profil" class="box">
+    <a href="/audyt" class="box">
       <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='65' height='65' viewBox='0 0 65 65'%3E%3Crect width='65' height='65' fill='%23f0f0f0'/%3E%3C/svg%3E"
            alt="Orzeł 3"
            data-src="orzel_3.png"
