--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     </div>
   </section>
 </div>
-
+<h1> Jak działa OREP </h1>
 <!-- STOPKA -->
 <footer>
   <p>&copy; 2025 Ogólnopolski Rejestr Elektryków</p>
