--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@
     </div>
   </section>
 </div>
-<h1> Jak działa OREP </h1>
+  <h1 class="mt-8 mb-6 text-[2rem] leading-9 md:text-[4rem] md:leading-[5rem] text-center font-bold">Jak działa OREP?</h1>
+
 <!-- STOPKA -->
 <footer>
   <p>&copy; 2025 Ogólnopolski Rejestr Elektryków</p>
