--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <meta property="og:image" content="https://i.postimg.cc/BLCHgVWq/logo1.png">
       <meta property="og:image" content="https://i.postimg.cc/8jcMR4ty/orzel-3.webp">
       <meta property="og:image" content="https://i.postimg.cc/qtVKdT4f/rejestracja.png">
+      <script src="https://cdn.tailwindcss.com"></script>
   <title>Ogólnopolski Rejestr Elektryków w Polsce</title>
   <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -333,7 +334,13 @@
     </div>
   </section>
 </div>
-  <h1 class="mt-8 mb-6 text-[2rem] leading-9 md:text-[4rem] md:leading-[5rem] text-center font-bold">Jak działa OREP?</h1>
+  <body class="p-8">
+    <!-- Twój kod -->
+    <h1 class="mt-8 mb-6 text-[2rem] leading-9 md:text-[4rem] md:leading-[5rem] text-center font-bold">
+        Jak działa OREP?
+    </h1>
+    
+    <p class="text-center text-gray-600">Testowy paragraf poniżej nagłówka</p>
 
 <!-- STOPKA -->
 <footer>
