--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
       <meta property="og:image" content="https://i.postimg.cc/BLCHgVWq/logo1.png">
       <meta property="og:image" content="https://i.postimg.cc/8jcMR4ty/orzel-3.webp">
       <meta property="og:image" content="https://i.postimg.cc/qtVKdT4f/rejestracja.png">
+  
       <script src="https://cdn.tailwindcss.com"></script>
+  script>
+    tailwind.config = {
+      corePlugins: {
+        preflight: false  // ← TO WYŁĄCZA RESET TAILWIND
+      }
+    }
+  </script>
+
+  
   <title>Ogólnopolski Rejestr Elektryków w Polsce</title>
   <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
