--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <meta property="og:image" content="https://i.postimg.cc/8jcMR4ty/orzel-3.webp">
       <meta property="og:image" content="https://i.postimg.cc/qtVKdT4f/rejestracja.png">
   
-      <script src="https://cdn.tailwindcss.com"></script>
-  script>
+      <script src="https://cdn.tailwindcss.com">
+  
     tailwind.config = {
       corePlugins: {
         preflight: false  // ← TO WYŁĄCZA RESET TAILWIND
