--- a/index.html
+++ b/index.html
@@ -17,14 +17,31 @@
       <meta property="og:image" content="https://i.postimg.cc/8jcMR4ty/orzel-3.webp">
       <meta property="og:image" content="https://i.postimg.cc/qtVKdT4f/rejestracja.png">
   
-      <script src="https://cdn.tailwindcss.com">
+      <<head>
+  <!-- ... meta tagi ... -->
   
+  <!-- TAILWIND CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- KONFIGURACJA Tailwind (BEZPOŚREDNIO PO CDN) -->
+  <script>
     tailwind.config = {
       corePlugins: {
-        preflight: false  // ← TO WYŁĄCZA RESET TAILWIND
+        preflight: false 
       }
     }
   </script>
+  
+  <!-- TWÓJ INLINE CSS (TERAZ ZADZIAŁA PRAWIDŁOWO) -->
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    /* ... reszta twoich stylów ... */
+  </style>
+</head>
 
   
   <title>Ogólnopolski Rejestr Elektryków w Polsce</title>
