--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <!-- TAILWIND CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   
-  <!-- 2. KONFIGURACJA - WYŁĄCZENIE RESETU -->
+  <!-- KONFIGURACJA Tailwind (BEZPOŚREDNIO PO CDN) -->
   <script>
     tailwind.config = {
       corePlugins: {
-        preflight: false  // ← KLUCZOWA LINIJKA
+        preflight: false 
       }
     }
   </script>
