--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
     
     <div class="image-text-image">
       <!-- Tutaj wstaw swój obrazek -->
-      <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+      <img src="/zadowolony_klient.png" 
            alt="Elektryk przy pracy" 
            loading="lazy">
     </div>
