--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
     
     <div class="image-text-image">
       <!-- Tutaj wstaw swój obrazek -->
-      <img src="/zadowolony_klient.png" 
+      <img src="/Zopinie_klientow.png" 
            alt="Elektryk przy pracy" 
            loading="lazy">
     </div>
