--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       align-items: center;
       gap: 8px;
       padding: 10px 20px;
-      background: linear-gradient(135deg, #F6F1EB 0%, #EAD7C5 100%);
+      background: linear-gradient(135deg, #FFFFFF 0%, #EAD7C5 100%);
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
       border-bottom: 2px solid #F2C9A5;
     }
