--- a/index.html
+++ b/index.html
@@ -558,8 +558,17 @@
     <p class="seo-text">
       <strong>Ogólnopolski Rejestr Elektryków (OREP)</strong> to profesjonalna platforma internetowa, 
       która łączy certyfikowanych elektryków z klientami poszukującymi fachowych usług elektrycznych 
-      na terenie całej Polski. Nasza platforma powstała z myślą o bezpieczeństwie i wygodzie zarówno 
-      wykonawców, jak i osób potrzebujących pomocy elektryka.
+      na terenie całej Polski. Portal został stworzony z myślą o elektrykach, którzy chcieliby rozpocząć 
+      przygodę w świecie instalacji elektrycznych na własną rękę. Chcielibyśmy ułatwić dostęp zarówno 
+      klientom do sprawdzonych fachowców, jak i osobom, które potrzebują rady i pomocy, do specjalisty z 
+      dziedziny elektryki. Stworzyliśmy w tym celu miejsce, gdzie możesz przedstawić siebie, opisać swoje 
+      doświadczenie i kwalifikacje. Mam na imię Piotr i jestem założycielem oraz administratorem tej strony.
+      Z wykształcenia i zamiłowania jestem czynnym elektrykiem. Przez ostatnie 26 lat pracy w tym zawodzie 
+      miałem szczęście uczestniczyć w przeróżnych projektach. Były to fascynujące, irytujące, ciekawe, jak i 
+      stresujące chwile, ale nauczyłem się jednego – najważniejsi są zwykli ludzie. I właśnie dla tych ludzi 
+      postanowiłem stworzyć stronę OREP.pl. Kiedyś usłyszałem, że elektrycy to najgorsi bałaganiarze na budowie.
+      Więc nie czekaj, zrób własny bałagan, stwórz swój profil elektryka i działaj. Przecież możesz tylko zyskać.
+      Powodzenia.
     </p>
 
     <div class="seo-list">
