--- a/index.html
+++ b/index.html
@@ -560,15 +560,20 @@
       która łączy certyfikowanych elektryków z klientami poszukującymi fachowych usług elektrycznych 
       na terenie całej Polski. Portal został stworzony z myślą o elektrykach, którzy chcieliby rozpocząć 
       przygodę w świecie instalacji elektrycznych na własną rękę. Chcielibyśmy ułatwić dostęp zarówno 
-      klientom do sprawdzonych fachowców, jak i osobom, które potrzebują rady i pomocy, do specjalisty z 
-      dziedziny elektryki. Stworzyliśmy w tym celu miejsce, gdzie możesz przedstawić siebie, opisać swoje 
-      doświadczenie i kwalifikacje. Mam na imię Piotr i jestem założycielem oraz administratorem tej strony.
-      Z wykształcenia i zamiłowania jestem czynnym elektrykiem. Przez ostatnie 26 lat pracy w tym zawodzie 
-      miałem szczęście uczestniczyć w przeróżnych projektach. Były to fascynujące, irytujące, ciekawe, jak i 
-      stresujące chwile, ale nauczyłem się jednego – najważniejsi są zwykli ludzie. I właśnie dla tych ludzi 
-      postanowiłem stworzyć stronę OREP.pl. Kiedyś usłyszałem, że elektrycy to najgorsi bałaganiarze na budowie.
-      Więc nie czekaj, zrób własny bałagan, stwórz swój profil elektryka i działaj. Przecież możesz tylko zyskać.
-      Powodzenia.
+      klientom do sprawdzonych fachowców, jak i osobom, które potrzebują rady i pomocy, do specjalisty 
+      z dziedziny elektryki. Stworzyliśmy w tym celu miejsce, gdzie możesz przedstawić siebie, opisać 
+      swoje doświadczenie i kwalifikacje. Mam na imię Piotr i jestem założycielem oraz administratorem 
+      tej strony. Z wykształcenia i zamiłowania jestem czynnym elektrykiem. Przez ostatnie 26 lat pracy 
+      w tym zawodzie miałem szczęście uczestniczyć w przeróżnych projektach. Były to fascynujące, irytujące,
+      ciekawe, jak i stresujące chwile, ale nauczyłem się jednego – najważniejsi są zwykli ludzie. I właśnie
+      dla tych ludzi postanowiłem stworzyć stronę OREP.pl. Kiedyś usłyszałem, że elektrycy to najgorsi 
+      bałaganiarze na budowie. Więc nie czekaj, zrób własny bałagan, stwórz swój profil elektryka i działaj. 
+      Przecież możesz tylko zyskać. Oj, chyba miałem napisać, jak to działa – w końcu taki jest główny nagłówek. 
+      Więc jako elektryk wypełniasz formularz, podstawowe dane, w polu „zajmuję się” opisujesz siebie jako 
+      najlepszego elektryka, jakim na pewno jesteś. Dodajesz skan swoich uprawnień wydanych przez:
+      Stowarzyszenie Elektryków Polskich (SEP), Polskie Zrzeszenie Inżynierów i Techników Sanitarnych (PZITS),
+      Stowarzyszenie Polskich Energetyków (SPE) lub inną komisję kwalifikacyjną powołaną przez Prezesa Urzędu
+      Regulacji Energetyki (URE) i start. To wszystko. Prosto, szybko i fachowo. Powodzenia.
     </p>
 
     <div class="seo-list">
