--- a/index.html
+++ b/index.html
@@ -588,9 +588,16 @@
     </div>
 
     <p class="seo-text">
-      Dla <strong>klientów poszukujących elektryka</strong> OREP.pl oferuje przejrzysty system wyszukiwania 
-      fachowców według lokalizacji, specjalizacji, dostępności i ocen. Każdy profil elektryka zawiera 
-      szczegółowe informacje o uprawnieniach, doświadczeniu oraz zakresie świadczonych usług.
+      Dla <strong>klientów poszukujących elektryka</strong> OREP.pl oferuje 
+      przejrzysty system wyszukiwania fachowców według lokalizacji, specjalizacji,
+      dostępności i ocen. Każdy profil elektryka zawiera szczegółowe informacje o 
+      uprawnieniach, doświadczeniu oraz zakresie świadczonych usług. Czyli po 
+      prostu strona, gdzie znajdziesz najszybciej elektryka z twojej okolicy.
+      Sprawdzisz jego posiadane kwalifikacje, będziesz mógł/mogła przejrzeć jego profil,
+      przekonać się, czy to właśnie on jest tą rzetelną osobą, która pomoże Ci w remoncie, 
+      a w ostateczności możesz się z elektrykiem skontaktować mailowo lub telefonicznie.
+      Życzymy tylko trafnych wyborów i spokojnych chwil w świecie elektryki z wybranym 
+      przez Ciebie fachowcem.
     </p>
 
     <div class="highlight-box">
