--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <meta property="og:image" content="https://i.postimg.cc/8jcMR4ty/orzel-3.webp">
   <meta property="og:image" content="https://i.postimg.cc/qtVKdT4f/rejestracja.png">
   <title>Ogólnopolski Rejestr Elektryków w Polsce | OREP.pl</title>
-  <link rel="icon" href="favicon.png" type="image/png" />
+
+  <link rel="stylesheet" href="css/style.css"><link rel="icon" href="favicon.png" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
