--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -5,7 +5,7 @@
 <meta name="robots" content="noindex, nofollow">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="css/wyszukiwarka.css">
+<link rel="stylesheet" href="/css/wyszukiwarka.css">
 
 
 <title>Ogólnopolski Rejestr Elektryków</title>
