--- a/Bush/index.html
+++ b/Bush/index.html
@@ -169,7 +169,7 @@
         <button class="quick-btn" onclick="runCmd('pkg update')">📦 update</button>
         <button class="quick-btn" onclick="runCmd('pkg install nodejs')">🟢 install node</button>
         <button class="quick-btn" onclick="runCmd('npm install -g supabase')">⬇️ supabase CLI</button>
-        <button class="quick-btn green" onclick="runCmd('supabase functions download verify-admin --project-ref tfbqqduxtsacvwfigsvt')">⬇️ pobierz funkcję</button>
+        <button class="quick-btn green" onclick="runCmd('supabase functions download waznosc_uprawnien --project-ref tfbqqduxtsacvwfigsvt')">⬇️ pobierz funkcję</button>
         <button class="quick-btn" onclick="runCmd('ls -la')">📂 ls</button>
         <button class="quick-btn" onclick="runCmd('pwd')">📍 pwd</button>
         <button class="quick-btn" onclick="runCmd('clear')">🧹 clear</button>
